Fixed several bugs.

--- a/share/templates/share/providers/facebook.html
+++ b/share/templates/share/providers/facebook.html
@@ -1,6 +1,1 @@
-<div id="facebook-placeholder"></div>
-<script type="text/javascript">
-	$(function() {
-		$("#facebook-placeholder").share({provider: 'facebook'});
-	});
- </script>
+<div id="facebook-placeholder" class="share-placeholder" data-provider="facebook"></div>
