--- a/share/templates/share/providers/pinterest.html
+++ b/share/templates/share/providers/pinterest.html
@@ -1,6 +1,1 @@
-<div id="pinterest-placeholder"></div>
-<script type="text/javascript">
-	$(function() {
-	    $("#pinterest-placeholder").share({provider: 'pinterest'});
-	});
- </script>
+<div id="pinterest-placeholder" class="share-placeholder" data-provider="pinterest"></div>
