--- a/share/templates/share/providers/twitter.html
+++ b/share/templates/share/providers/twitter.html
@@ -1,6 +1,1 @@
-<div id="twitter-placeholder"></div>
-<script type="text/javascript">
-	$(function() {
-	    $("#twitter-placeholder").share({provider: 'twitter'});
-	})
- </script>
+<div id="twitter-placeholder" class="share-placeholder" data-provider="twitter"></div>
